HTML elements added for all pages

--- a/contact us.html
+++ b/contact us.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pita Homepage</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Contact Us</title>
 </head>
 <body>
     <header>
@@ -21,52 +20,9 @@
             </nav>
         </div>
     </header>
-
+    
     <main>
-        <section class="cta">
-            <div class="cta-box">
-                <p>Authentic Pinoy Cuisine in Dubai</p>
-                <h1>The Place Where You Belong</h1>
-            </div>
-        </section>
-        <section class="menu">
-            <div class="menu-title">
-                <h1>View Our Bestsellers</h1>
-                <p>Discover the rich flavor of our cuisine</p>
-                <button>View Our Full Menu</button>
-            </div>
-            <div class="menu-container">
-                <div class="menu-box" id=""></div>
-                <div class="menu-box" id=""></div>
-                <div class="menu-box" id=""></div>
-                <div class="menu-box" id=""></div>
-                <div class="menu-box" id=""></div>
-            </div>
-        </section>
-        <section class="gallery">
-            <div class="gallery-title">
-                <h1>Pita, Dubai</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tincidunt interdum molestie. Suspendisse posuere dolor at elementum dapibus. Proin ligula enim, facilisis at velit et, convallis suscipit erat. Integer turpis leo, pulvinar a fringilla vel, vestibulum at ex. Nullam mattis mollis sapien, a auctor ante egestas id</p>
-            </div>
-            <div class="gallery-container">
-                <div class="row1">  
-                    <div class="images"></div>
-                    <div class="images"></div>
-                    <div class="images"></div>
-                </div>
-                <div class="row2">
-                    <div class="images"></div>
-                    <div class="images"></div>
-                    <div class="images"></div>
-                </div>
-                <div class="row3">
-                    <div class="images"></div>
-                    <div class="images"></div>
-                    <div class="images"></div>
-                </div>
-            </div>
-            <button></button>
-        </section>
+
         <section class="cater-container">
             <div class="cater-box">
                 <p>Get in Touch</p>
@@ -74,25 +30,7 @@
                 <button>Cater With Us</button>
             </div>
         </section>
-        <section class="review-section">
-            <div class="review title">
-                <h1>What Customers Are Saying About Us</h1>
-                <p>Over 200+ happy and fulfilled customers have left our doors satisfied and ready to order for more.</p>
-            </div>
-            <div class="review-container">
-                <div class="review-box"></div>
-                <div class="review-box"></div>
-                <div class="review-box"></div>
-                <div class="review-box"></div>
-            </div>
-        </section>
-        <section class="faq-container">
-            <h3>What are You known for?</h3>
-            <h3>What meals do you serve?</h3>
-            <h3>Do you offer delivery?</h3>
-            <h3>What areas do you serve</h3>
-        </section>
-        
+
         <section class="order-container">
             <div class="order-box">
                 <h2>Order Directly from our website or via our WhatsApp to save money on fees, get faster service, and support local businesses.</h2>
@@ -100,6 +38,7 @@
                 <button>Order Online</button>
             </div>
         </section>
+
         <section class="location">
             <div class="location-container">
                 <h1>Where Can You Find Us?</h1>
@@ -124,11 +63,7 @@
                 </div>
             </div>
         </section>
-        <section class="contact-us">
-            <h1>Got More Questions?</h1>
-            <p>We’d love to hear from you!</p>
-            <button>Contact Us</button>
-        </section>
+
         <footer>
             <div class="footer-content">
                 <div class="footer-logo"><img src="" alt=""></div>
