all pages fixed (sa menu page nalang)

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
     <header>
         <div class="header-container">
-            <img src="Assets/download 1.png" alt="Restaurant Logo" class="logo">
+            <img src="Assets/Pita Logo.png" alt="Restaurant Logo" class="logo">
             <nav>
                 <ul class="nav-menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about us.html">About Us</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="contact us.html">Contact Us</a></li>
                 </ul>
                 <button class="order-btn">Order Now</button>
             </nav>
@@ -43,31 +43,31 @@
                     <div class="menu-img-placeholder"></div>
                     <h2 class="dish-name">Beef Adobo</h2>
                     <p class="dish-price">40 AED</p>
-                    <div class="dish-rating">⭐⭐⭐⭐ 238</div>
+                    <div class="dish-rating">★★★★★ 238</div>
                   </div>
                   <div class="menu-box">
                     <div class="menu-img-placeholder"></div>
                     <h2 class="dish-name">Beef Adobo</h2>
                     <p class="dish-price">40 AED</p>
-                    <div class="dish-rating">⭐⭐⭐⭐ 238</div>
+                    <div class="dish-rating">★★★★★ 238</div>
                   </div>
                   <div class="menu-box">
                     <div class="menu-img-placeholder"></div>
                     <h2 class="dish-name">Beef Adobo</h2>
                     <p class="dish-price">40 AED</p>
-                    <div class="dish-rating">⭐⭐⭐⭐ 238</div>
+                    <div class="dish-rating">★★★★★ 238</div>
                   </div>
                   <div class="menu-box">
                     <div class="menu-img-placeholder"></div>
                     <h2 class="dish-name">Beef Adobo</h2>
                     <p class="dish-price">40 AED</p>
-                    <div class="dish-rating">⭐⭐⭐⭐ 238</div>
+                    <div class="dish-rating">★★★★★ 238</div>
                   </div>
                   <div class="menu-box">
                     <div class="menu-img-placeholder"></div>
                     <h2 class="dish-name">Beef Adobo</h2>
                     <p class="dish-price">40 AED</p>
-                    <div class="dish-rating">⭐⭐⭐⭐ 238</div>
+                    <div class="dish-rating">★★★★★ 238</div>
                   </div>
                   
             </div>
@@ -96,6 +96,7 @@
             </div>
             <button class="learn-more-btn">Learn More About Our Story</button>
         </section>
+
         <section class="cater-container">
             <div class="cater-box">
                 <p>Get in Touch</p>
@@ -198,14 +199,14 @@
         </section>
         <footer>
             <div class="footer-content">
-                <div class="footer-logo"><img src="Assets/download 1.png" alt=""></div>
+                <div class="footer-logo"><img src="Assets/Pita Logo.png" alt=""></div>
 
                 <div class="list-1">
                     <ul>
-                      <li><a href="">Home</a></li>
-                      <li><a href="">About Us</a></li>
-                      <li><a href="">Services</a></li>
-                      <li><a href="">Contact Us</a></li>
+                      <li><a href="index.html">Home</a></li>
+                      <li><a href="about us.html">About Us</a></li>
+                      <li><a href="services.html">Services</a></li>
+                      <li><a href="contact us.html">Contact Us</a></li>
                     </ul>
                   </div>              
                 <div class="list2">
