--- a/about us.html
+++ b/about us.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="about us.css">
 </head>
 <body>
     <header>
         <div class="header-container">
-            <img src="logo.png" alt="Restaurant Logo" class="logo">
+            <img src="Assets/Pita Logo.png" alt="Restaurant Logo" class="logo">
             <nav>
                 <ul class="nav-menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about us.html">About Us</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="contact us.html">Contact Us</a></li>
                 </ul>
                 <button class="order-btn">Order Now</button>
             </nav>
@@ -39,15 +41,11 @@
                     <h2>Behind The Success</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tincidunt interdum molestie. Suspendisse posuere dolor at elementum dapibus. Proin ligula enim, facilisis at velit et, convallis suscipit erat. Integer turpis leo, pulvinar a fringilla vel, vestibulum at ex. Nullam mattis mollis sapien, a auctor ante egestas id</p>
                 </div>
-                <div class="column">
-                    <img src="" alt="">
-                </div>
+                <div class="column placeholder"></div>
             </section>
 
             <section class="StoryContainer">
-                <div class="column">
-                    <img src="" alt="">
-                </div>
+                <div class="column placeholder"></div>
 
                 <div class="column">
                     <h2>The Experience</h2>
@@ -60,49 +58,54 @@
                     <h2>A Taste Of Home</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tincidunt interdum molestie. Suspendisse posuere dolor at elementum dapibus. Proin ligula enim, facilisis at velit et, convallis suscipit erat. Integer turpis leo, pulvinar a fringilla vel, vestibulum at ex. Nullam mattis mollis sapien, a auctor ante egestas id</p>
                 </div>
-                <div class="column">
-                    <img src="" alt="">
-                </div>
+                <div class="column placeholder"></div>
             </section>
         </section>
 
         <section class="order-container">
-            <div class="order-box">
-                <h2>Order Directly from our website or via our WhatsApp to save money on fees, get faster service, and support local businesses.</h2>
-                <button class="whatsapp">WhatsApp</button>
-                <button>Order Online</button>
-            </div>
-        </section>
+                <div class="order-box">
+                    <h2>Order Directly from our website or via our WhatsApp to save money on fees, get faster service, and support local businesses.</h2>
+                    <button class="whatsapp-btn">WhatsApp</button>
+                    <button class="order-online-btn">Order Online</button>
+                </div>
+            </section>
 
-        <section class="gallery">
-            <div class="gallery-title">
-                <h1>Pita, Dubai</h1>
-            </div>
-            <div class="gallery-container">
-                <div class="row1">  
-                    <div class="images"></div>
-                    <div class="images"></div>
-                    <div class="images"></div>
+            <section class="gallery">
+                <div class="gallery-title">
+                    <h1>Pita, Dubai</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tincidunt interdum molestie. Suspendisse posuere dolor at elementum dapibus. Proin ligula enim, facilisis at velit et, convallis suscipit erat. Integer turpis leo, pulvinar a fringilla vel, vestibulum at ex. Nullam mattis mollis sapien, a auctor ante egestas id</p>
                 </div>
-                <div class="row2">
-                    <div class="images"></div>
-                    <div class="images"></div>
-                    <div class="images"></div>
+                <div class="gallery-container">
+                    <div class="row1">  
+                        <div class="images"></div>
+                        <div class="images"></div>
+                        <div class="images"></div>
+                    </div>
+                    <div class="row2">
+                        <div class="images"></div>
+                        <div class="images"></div>
+                        <div class="images"></div>
+                    </div>
+                    <div class="row3">
+                        <div class="images"></div>
+                        <div class="images"></div>
+                        <div class="images"></div>
+                    </div>
                 </div>
-                <div class="row3">
-                    <div class="images"></div>
-                    <div class="images"></div>
-                    <div class="images"></div>
-                </div>
-            </div>
-        </section>
+                <button class="learn-more-btn">Learn More About Our Story</button>
+            </section>
 
-        <section class="faq-container">
-            <h3>What are You known for?</h3>
-            <h3>What meals do you serve?</h3>
-            <h3>Do you offer delivery?</h3>
-            <h3>What areas do you serve</h3>
-        </section>
+            <section class="faq-container">
+                <div class="faq-title">
+                    <h1>Frequntly Asked Questions</h1>
+                </div>
+                <div class="faq-questions">
+                    <h3>What are You known for?</h3>
+                    <h3>What meals do you serve?</h3>
+                    <h3>Do you offer delivery?</h3>
+                    <h3>What areas do you serve</h3>
+                </div>
+            </section>
 
         <section class="contact-us">
             <h1>Got More Questions?</h1>
@@ -112,32 +115,33 @@
 
         <footer>
             <div class="footer-content">
-                <div class="footer-logo"><img src="" alt=""></div>
+                <div class="footer-logo"><img src="Assets/Pita Logo.png" alt=""></div>
+
+                <div class="list-1">
+                    <ul>
+                      <li><a href="index.html">Home</a></li>
+                      <li><a href="about us.html">About Us</a></li>
+                      <li><a href="services.html">Services</a></li>
+                      <li><a href="contact us.html">Contact Us</a></li>
+                    </ul>
+                  </div>              
+                <div class="list2">
+                    <ul>
+                        <li><a href="">WhatsApp</a></li>
+                        <li><a href="">E-Mail</a></li>
+                        <li><a href="">Facebook</a></li>
+                        <li><a href="">Instagram</a></li>
+                    </ul>
+                </div>
+                <div class="list3">
+                    <ul>
+                        <li><a href="">Our Newsletter</a></li>
+                        <li><a href="">Loyalty Program</a></li>
+                        <li><a href="">Menu</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="list-1">
-                <ul>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                </ul>
-            </div>
-            <div class="list2">
-                <ul>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                </ul>
-            </div>
-            <div class="list3">
-                <ul>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                </ul>
-            </div>
+            
             <div class="footer-bottom">
                 <div class="copyright-info">
                     <li><a href="">&copy; 2024 Rythimize. All rights reserved.</a></li>
