--- a/menu.html
+++ b/menu.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="header-container">
-            <img src="logo.png" alt="Restaurant Logo" class="logo">
+            <img src="Assets/Pita Logo.png" alt="Restaurant Logo" class="logo">
             <nav>
                 <ul class="nav-menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about us.html">About Us</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="contact us.html">Contact Us</a></li>
                 </ul>
                 <button class="order-btn">Order Now</button>
             </nav>
