--- a/contact-us.html
+++ b/contact-us.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="contact us.css">
+    <link rel="stylesheet" href="contact-us.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
     <!-- ==================== HEADER ==================== -->
@@ -18,9 +19,9 @@
             <nav>
                 <ul class="nav-menu">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about us.html">About Us</a></li>
+                    <li><a href="about-us.html">About Us</a></li>
                     <li><a href="services.html">Services</a></li>
-                    <li><a href="contact us.html">Contact Us</a></li>
+                    <li><a href="contact-us.html" class="active">Contact Us</a></li>
                 </ul>
                 <button class="default-btn-red order-btn"><a href="menu.html">Order Now</a></button>
             </nav>
@@ -165,12 +166,13 @@
                 </div>
             </div>
         </div>
-        <br>
+        <hr>
         <div class="footer-bottom">
             <li>&copy; 2025 Pita Restaurants</li>
             <li>Privacy Policy</li>
             <li>Terms and Condition</li>
         </div>
     </footer>
+    
 </body>
 </html>
