--- a/menu.html
+++ b/menu.html
@@ -17,9 +17,9 @@
             <nav>
                 <ul class="nav-menu">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about us.html">About Us</a></li>
+                    <li><a href="about-us.html">About Us</a></li>
                     <li><a href="services.html">Services</a></li>
-                    <li><a href="contact us.html">Contact Us</a></li>
+                    <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
                 <button class="default-btn-red order-btn"><a href="menu.html">Order Now</a></button>
             </nav>
