--- a/menu.html
+++ b/menu.html
@@ -14,17 +14,27 @@
     <header>
         <div class="header-container">
             <img src="Assets/Pita Logo.png" alt="Restaurant Logo" class="logo">
+            <!-- Hamburger Icon (only visible on mobile via CSS) -->
+            <button class="mobile-menu-toggle">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
+
             <nav>
                 <ul class="nav-menu">
-                    <li><a href="index.html">Home</a></li>
+                    <button class="close-menu">&times;</button>
+                    <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="about-us.html">About Us</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="contact-us.html">Contact Us</a></li>
+                    <button class="default-btn-red order-btn"><a href="menu.html">Order Now</a></button>
                 </ul>
-                <button class="default-btn-red order-btn"><a href="menu.html">Order Now</a></button>
             </nav>
+            <button class="default-btn-red order-btn" id="order-btn-desktop"><a href="menu.html">Order Now</a></button>
+            
         </div>
     </header>
-
+    <script src="script.js"></script>
 </body>
 </html>
