feat(menu): update JSON with additional dishes and featured items

--- a/index.html
+++ b/index.html
@@ -53,41 +53,13 @@
             <div class="menu-title">
                 <h1>View Our Bestsellers</h1>
                 <p>Discover the rich flavor of our cuisine</p>
-                <button class="default-btn-red full-menu-btn">View Our Full Menu</button>
+                <button class ="default-btn-red full-menu-btn"><a href="menu.html">View Our Full Menu</a></button>
             </div>
-            <div class="menu-items-container">
-                <div class="menu-item-box">
-                    <div class="menu-img-placeholder"></div>
-                    <h2 class="dish-name">Menu Item Name</h2>
-                    <p class="dish-price">50.00 AED</p>
-                    <div class="dish-rating">★★★★★ 100</div>
-                </div>
-                <div class="menu-item-box">
-                    <div class="menu-img-placeholder"></div>
-                    <h2 class="dish-name">Menu Item Name</h2>
-                    <p class="dish-price">50.00 AED</p>
-                    <div class="dish-rating">★★★★★ 100</div>
-                </div>
-                <div class="menu-item-box">
-                    <div class="menu-img-placeholder"></div>
-                    <h2 class="dish-name">Menu Item Name</h2>
-                    <p class="dish-price">50.00 AED</p>
-                    <div class="dish-rating">★★★★★ 100</div>
-                </div>
-                <div class="menu-item-box">
-                    <div class="menu-img-placeholder"></div>
-                    <h2 class="dish-name">Menu Item Name</h2>
-                    <p class="dish-price">50.00 AED</p>
-                    <div class="dish-rating">★★★★★ 100</div>
-                </div>
-                <div class="menu-item-box">
-                    <div class="menu-img-placeholder"></div>
-                    <h2 class="dish-name">Menu Item Name</h2>
-                    <p class="dish-price">50.00 AED</p>
-                    <div class="dish-rating">★★★★★ 100</div>
-                </div>
+            <div class="menu-items-container" id="menu-items">
+                <!-- Menu items will be loaded here dynamically -->
             </div>
         </section>
+
 
         <!-- ==================== GALLERY SECTION ==================== -->
         <section class="gallery">
@@ -112,7 +84,7 @@
                     <div class="images" id="image-nine"></div>
                 </div>
             </div>
-            <button class="default-btn-red learn-more-btn">Learn More About Our Story</button>
+           <button class="default-btn-red learn-more-btn"><a href=about-us.html>Learn More About Our Story</a></button>
         </section>
 
         <!-- ==================== CATERING BANNER ==================== -->
