--- a/menu.html
+++ b/menu.html
@@ -35,6 +35,30 @@
             
         </div>
     </header>
+
+<section class="menu">
+    <div class="menu-title">
+        <h1>Our Full Menu</h1>
+        <p>Select a category to filter the menu items:</p>
+    </div>
+
+    <!-- Filter Dropdown -->
+    <div class="category-filter-container">
+       
+        <div class="dropdown-content">
+            <button class="category-btn" data-category="All">All</button>
+            <button class="category-btn" data-category="Featured">Featured</button>
+            <button class="category-btn" data-category="Main">Main</button>
+            <button class="category-btn" data-category="Dessert">Dessert</button>
+        </div>
+    </div>
+
+    <div class="menu-items-list" id="menu-items">
+        <!-- Items will be dynamically populated here -->
+    </div>
+</section>
+
+
     <script src="script.js"></script>
 </body>
 </html>
