--- a/services.html
+++ b/services.html
@@ -54,39 +54,10 @@
             <div class="menu-title">
                 <h1>View Our Bestsellers</h1>
                 <p>Discover the rich flavor of our cuisine</p>
-                <button class="default-btn-red full-menu-btn">View Our Full Menu</button>
+                <button class ="default-btn-red full-menu-btn"><a href="menu.html">View Our Full Menu</a></button>
             </div>
-            <div class="menu-items-container">
-                <div class="menu-item-box">
-                    <div class="menu-img-placeholder"></div>
-                    <h2 class="dish-name">Beef Adobo</h2>
-                    <p class="dish-price">40 AED</p>
-                    <div class="dish-rating">★★★★★ 238</div>
-                </div>
-                <div class="menu-item-box">
-                    <div class="menu-img-placeholder"></div>
-                    <h2 class="dish-name">Beef Adobo</h2>
-                    <p class="dish-price">40 AED</p>
-                    <div class="dish-rating">★★★★★ 238</div>
-                </div>
-                <div class="menu-item-box">
-                    <div class="menu-img-placeholder"></div>
-                    <h2 class="dish-name">Beef Adobo</h2>
-                    <p class="dish-price">40 AED</p>
-                    <div class="dish-rating">★★★★★ 238</div>
-                </div>
-                <div class="menu-item-box">
-                    <div class="menu-img-placeholder"></div>
-                    <h2 class="dish-name">Beef Adobo</h2>
-                    <p class="dish-price">40 AED</p>
-                    <div class="dish-rating">★★★★★ 238</div>
-                </div>
-                <div class="menu-item-box">
-                    <div class="menu-img-placeholder"></div>
-                    <h2 class="dish-name">Beef Adobo</h2>
-                    <p class="dish-price">40 AED</p>
-                    <div class="dish-rating">★★★★★ 238</div>
-                </div>  
+            <div class="menu-items-container" id="menu-items">
+                <!-- Menu items will be loaded here dynamically -->
             </div>
         </section>
 
